--- a/client-app/src/app/shared/tipo-equipo/tipo-equipo.component.html
+++ b/client-app/src/app/shared/tipo-equipo/tipo-equipo.component.html
@@ -46,7 +46,7 @@
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-10">
-            <label class="form-tipo-equipo-label" for="clase">Personal a Cargo:</label>
+            <label class="form-tipo-equipo-label" for="clase">Seccion a Cargo:</label>
           </div>
           <div class="col-xs-10">
             <input class="form-control" id="personal"
