--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -59,8 +59,8 @@
       <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
                   [class.selectEquipo]="equipo === selectedEquipo">
         <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.tipoEquipo.tipo}}</clr-dg-cell>
-        <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.modeloEquipo?.modelo}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.contrato?.numeroContrato}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.representante?.nombre}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.ubicacion?.numeroSala}}</clr-dg-cell>
