--- a/client-app/src/app/shared/representante/representante.component.html
+++ b/client-app/src/app/shared/representante/representante.component.html
@@ -40,15 +40,17 @@
           <div class="col-xs-3 col-label-representante">
             <label class="form-representante-label required" for="telefono">Telefono:</label>
           </div>
-          <div class="col-xs-3">
+          <div class="col-xs-5">
             <input class="form-control" id="telefono" required
                    name="telefono" [(ngModel)]="telefono">
           </div>
+        </div>
+        <div class="form-group row flex-items-xs-left">
 
-          <div class="col-xs-3">
-            <label class="form-representante-label required" for="contacto">Tel. Contacto:</label>
+          <div class="col-xs-3 col-label-representante">
+            <label class="form-representante-label required" for="contacto">Nombre Contacto:</label>
           </div>
-          <div class="col-xs-3">
+          <div class="col-xs-5">
             <input class="form-control" id="contacto" required
                    name="contacto" [(ngModel)]="telefonoContacto">
           </div>
