--- a/client-app/src/app/home/contrato/add-contrato/add-contrato.component.css
+++ b/client-app/src/app/home/contrato/add-contrato/add-contrato.component.css
@@ -16,6 +16,7 @@
 
 .selectEquipo {
   background-color: darkgrey !important;
+  cursor: pointer !important;
 }
 
 .col-label-add-contrato {
@@ -46,7 +47,6 @@
   cursor: default;
   background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
   height: 30px !important;
-  margin-left: 1% !important;
   width: 100% !important;
   display: block;
 }
