--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -21,7 +21,7 @@
   <section class="form-block">
     <!--información gral del contrato-->
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
+      <div class="col-xs-2 col-label-edit-contrato">
         <label class="form-edit-contrato-label required" for="id">ID:</label>
       </div>
       <div class="col-xs-2">
@@ -29,7 +29,7 @@
                name="id" [(ngModel)]="contratoId">
       </div>
 
-      <div class="col-xs-2 col-label-add-contrato">
+      <div class="col-xs-2 col-label-edit-contrato">
         <label class="form-edit-contrato-label" for="nroContrato">Nro. Contrato:</label>
       </div>
       <div class="col-xs-2">
@@ -39,17 +39,17 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
+      <div class="col-xs-2 col-label-edit-contrato">
         <label class="form-edit-contrato-label required" for="tipo">Tipo Procedimiento:</label>
       </div>
-      <div class="col-xs-4">
+      <div class="col-xs-2">
         <input class="form-control" id="tipo" required
                name="tipo" [(ngModel)]="tipoProcedimiento">
       </div>
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
+      <div class="col-xs-2 col-label-edit-contrato">
         <label class="form-edit-contrato-label required" for="convocante">Convocante:</label>
       </div>
       <div class="col-xs-5">
@@ -59,23 +59,24 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
-        <label class="form-edit-contrato-label required" for="licitacion">Nombre Licitación:</label>
+      <div class="col-xs-2 col-label-edit-contrato">
+        <label class="form-edit-contrato-label required">Nombre Licitación:</label>
       </div>
       <div class="col-xs-5">
-        <input class="form-control" id="licitacion" required
-               name="licitacion" [(ngModel)]="nombreLicitacion">
+        <textarea class="form-control" id="descripcion" rows="5" tabindex="9"
+                  name="descripcion" [(ngModel)]="nombreLicitacion" required>
+        </textarea>
       </div>
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
+      <div class="col-xs-2 col-label-edit-contrato">
         <label class="form-edit-contrato-label" for="estado">Estado:</label>
       </div>
       <div class="col-xs-2">
         <div class="select form-control">
           <select class="select-form-contrato" id="estado" #selectEstado name="estado"
-                  [(ngModel)]="estadoSeleccionado"
+                  [(ngModel)]="estadoContrato"
                   (change)="onSelectedEstadoContrado(selectEstado.value)">
             <option *ngFor="let estado of estadosContrato"
                     value={{estado.nombre}}>{{estado.nombre}}
@@ -83,32 +84,37 @@
           </select>
         </div>
       </div>
-
-      <div class="col-xs-1 col-label-add-contrato">
-        <label class="form-edit-contrato-label required" for="inicio">Inicio:</label>
+    </div>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2 col-label-edit-contrato">
+        <label class="form-edit-contrato-label required">Fecha Inicio:</label>
       </div>
       <div class="col-xs-2">
-        <input class="form-control" placeholder="dd/mm/yyyy"
-               id="inicio" required name="inicio"
-               [(ngModel)]="fechaInicio">
+        <p-calendar [(ngModel)]="fechaInicio" dateFormat="dd-mm-yy"
+                    placeholder="dd-mm-yyyy"
+                    [monthNavigator]="true" [yearNavigator]="true"
+                    yearRange="2000:2035"  name="finicio">
+        </p-calendar>
       </div>
-      <div class="col-xs-2 col-label-add-contrato">
-        <label class="form-edit-contrato-label required" for="fin">Finalización:</label>
+      <div class="col-xs-2 col-label-edit-contrato">
+        <label class="form-edit-contrato-label required">Finalización:</label>
       </div>
       <div class="col-xs-2">
-        <input class="form-control" placeholder="dd/mm/yyyy"
-               id="fin" required name="fin"
-               [(ngModel)]="fechaFin">
+        <p-calendar [(ngModel)]="fechaFin" dateFormat="dd-mm-yy"
+                    placeholder="dd-mm-yyyy"
+                    [monthNavigator]="true" [yearNavigator]="true"
+                    yearRange="2000:2035"  name="ffin">
+        </p-calendar>
       </div>
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
-        <label class="form-edit-contrato-label required">Representante:</label>
+      <div class="col-xs-2 col-label-edit-contrato">
+        <label class="form-edit-contrato-label">Representante:</label>
       </div>
 
       <div class="col-xs-5">
-        <input class="form-control" id="representante" required
+        <input class="form-control" id="representante"
                name="representante" [(ngModel)]="representante">
       </div>
     </div>
@@ -116,7 +122,7 @@
 
     <!--lista de equipos-->
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-add-contrato">
+      <div class="col-xs-2 col-label-edit-contrato">
         <label class="form-edit-contrato-label" for="equipo">Equipos:</label>
       </div>
       <div class="col-xs-5">
