Cambios en solicitud repuestos y en repuesto

--- a/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.css
+++ b/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.css
@@ -7,6 +7,10 @@
     font-weight: bold !important;
 }
 
+.col-label-equipo {
+  text-align: right !important;
+}
+
 .col-btn-edit-equipo {
     margin-left: -18px !important;
 }
