--- a/client-app/src/app/home/equipo/add-equipo/add-equipo.component.css
+++ b/client-app/src/app/home/equipo/add-equipo/add-equipo.component.css
@@ -7,6 +7,10 @@
   font-weight: bold !important;
 }
 
+.col-label-equipo {
+  text-align: right !important;
+}
+
 .col-btn-add-equipo {
   margin-left: -18px !important;
 }
