--- a/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.html
+++ b/client-app/src/app/home/equipo/edit-equipo/edit-equipo.component.html
@@ -5,7 +5,7 @@
       <!--columna izquierda-->
       <div class="col-xs-6">
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 ">
+          <div class="col-xs-3 col-label-equipo">
             <label class="form-edit-equipo-label required" for="serie">Nro. Serie:</label>
           </div>
           <div class="col-xs-6">
@@ -15,7 +15,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 ">
+          <div class="col-xs-3 col-label-equipo">
             <label class="form-edit-equipo-label" for="lote">Nro. Lote:</label>
           </div>
           <div class="col-xs-6">
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 ">
+          <div class="col-xs-3 col-label-equipo">
             <label class="form-edit-equipo-label" for="costo">Costo:</label>
           </div>
           <div class="col-xs-6">
@@ -35,7 +35,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 ">
+          <div class="col-xs-3 col-label-equipo">
             <label class="form-edit-equipo-label" for="fab">Fabricación:</label>
           </div>
           <div class="col-xs-6">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3">
+          <div class="col-xs-3 col-label-equipo">
             <label class="form-edit-equipo-label" for="descripcion">Descripción:</label>
           </div>
           <div class="col-xs-7">
@@ -60,7 +60,7 @@
       <!--columna derecha-->
       <div class="col-xs-6">
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-4 ">
+          <div class="col-xs-4 col-label-equipo">
             <label class="form-edit-equipo-label" for="patrimonial">Nro. Patrimonial:</label>
           </div>
           <div class="col-xs-5">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-4">
+          <div class="col-xs-4 col-label-equipo">
             <label class="form-edit-equipo-label">Estado:</label>
           </div>
           <div class="col-xs-5">
@@ -88,7 +88,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-4 ">
+          <div class="col-xs-4 col-label-equipo">
             <label class="form-edit-equipo-label">Fecha Compra:</label>
           </div>
           <div class="col-xs-5">
@@ -101,7 +101,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-4">
+          <div class="col-xs-4 col-label-equipo">
             <label class="form-edit-equipo-label">Vto. Garantia:</label>
           </div>
           <div class="col-xs-5">
@@ -114,7 +114,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-4 ">
+          <div class="col-xs-4 col-label-equipo">
             <label class="form-edit-equipo-label">Puesta en Marcha:</label>
           </div>
           <div class="col-xs-5">
@@ -127,7 +127,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-4 ">
+          <div class="col-xs-4 col-label-equipo">
             <label class="form-edit-equipo-label" for="version">Version Software:</label>
           </div>
           <div class="col-xs-5">
@@ -151,7 +151,7 @@
     <br>
     <div class="col-xs-8">
       <div class="form-group row flex-items-xs-left">
-        <div class="col-xs-2">
+        <div class="col-xs-2 col-label-equipo">
           <label class="form-edit-equipo-label required">Tipo:</label>
         </div>
         <div class="col-xs-6">
@@ -184,7 +184,7 @@
       </div>
 
       <div class="form-group row flex-items-xs-left">
-        <div class="col-xs-2">
+        <div class="col-xs-2 col-label-equipo">
           <label class="form-edit-equipo-label required">Modelo:</label>
         </div>
         <div class="col-xs-6">
@@ -216,7 +216,7 @@
       </div>
 
       <div class="form-group row flex-items-xs-left">
-        <div class="col-xs-2">
+        <div class="col-xs-2 col-label-equipo">
           <label class="form-edit-equipo-label required">Representante:</label>
         </div>
 
@@ -249,7 +249,7 @@
       </div>
 
       <div class="form-group row flex-items-xs-left">
-        <div class="col-xs-2">
+        <div class="col-xs-2 col-label-equipo">
           <label class="form-edit-equipo-label">Ubicación:</label>
         </div>
         <div class="col-xs-6">
