--- a/client-app/src/app/shared/modelo-equipo/modelo-equipo.component.html
+++ b/client-app/src/app/shared/modelo-equipo/modelo-equipo.component.html
@@ -5,7 +5,7 @@
     <form class="compact" #modeloEquipoForm="ngForm">
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
+          <div class="col-xs-3 col-label-modelo">
             <label class="form-modelo-equipo-label required" for="modelo">Modelo:</label>
           </div>
           <div class="col-xs-6">
@@ -15,7 +15,7 @@
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3 col-label-equipo">
+          <div class="col-xs-3 col-label-modelo">
             <label class="form-modelo-equipo-label required" for="marca">Marca:</label>
           </div>
           <div class="col-xs-6">
