--- a/client-app/src/app/shared/repuesto/repuesto.component.css
+++ b/client-app/src/app/shared/repuesto/repuesto.component.css
@@ -7,6 +7,10 @@
   font-weight: bold !important;
 }
 
+.col-label-repuesto {
+  text-align: right !important;
+}
+
 .select .select-form-repuesto {
   border: 1px solid rgba(34, 36, 38, 0.50) !important;
   border-radius: 0 !important;
