--- a/client-app/src/app/shared/repuesto/repuesto.component.html
+++ b/client-app/src/app/shared/repuesto/repuesto.component.html
@@ -5,6 +5,21 @@
   <div class="modal-body">
     <form class="compact" #repuestoForm="ngForm">
 
+      <!-- info -->
+      <div class="alert alert-info" *ngIf="info">
+        <div class="alert-items">
+          <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+              <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+            </div>
+            <span class="alert-text">{{errorMessage}}</span>
+          </div>
+        </div>
+        <button type="button" class="close" aria-label="Close" (click)="info = false">
+          <clr-icon aria-hidden="true" shape="close"></clr-icon>
+        </button>
+      </div>
+
       <!-- errors -->
       <div class="alert alert-danger" *ngIf="error">
         <div class="alert-items">
@@ -22,115 +37,139 @@
 
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-repuesto-label">Código:</label>
-          </div>
-          <div class="col-xs-3" *ngIf="!isEditRepuesto">
-            <input class="form-control" id="codRepuesto"
-                   name="codRepuesto" #codRep
-                   (keyup.enter)="onEnterCodigoRepuesto(codRep.value)"
-                   (keyup)="onKeyCodigoRepuesto(codRep.value)"
-                   [(ngModel)]="codigo">
-          </div>
-          <div class="col-xs-3" *ngIf="isEditRepuesto">
-            <input class="form-control" id="codigo"
-                   name="codigo" [(ngModel)]="codigo">
-          </div>
-          <div class="col-xs-2">
-            <label class="form-repuesto-label" for="descripcionArt">Descripción:</label>
-          </div>
-          <div class="col-xs-4">
-            <input class="form-control" id="descripcionArt" [disabled]="readonlyField"
-                   name="descripcionArt" [(ngModel)]="descripcion">
-          </div>
-        </div>
+          <!--columna izquierda-->
+          <div class="col-xs-6">
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label">Código:</label>
+              </div>
+              <div class="col-xs-5" *ngIf="!isEditRepuesto">
+                <input class="form-control" id="codRepuesto"
+                       name="codRepuesto" #codRep tabindex="1"
+                       (keyup.enter)="onEnterCodigoRepuesto(codRep.value)"
+                       (keyup)="onKeyCodigoRepuesto(codRep.value)"
+                       [(ngModel)]="codigo">
+              </div>
+              <div class="col-xs-5" *ngIf="isEditRepuesto">
+                <input class="form-control" id="codigo" tabindex="1"
+                       name="codigo" [(ngModel)]="codigo">
+              </div>
+            </div>
 
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-repuesto-label" for="precio">Precio:</label>
-          </div>
-          <div class="col-xs-3">
-            <input class="form-control" id="precio" [disabled]="readonlyField"
-                   name="precio" [(ngModel)]="precio">
-          </div>
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label" for="precio">Precio:</label>
+              </div>
+              <div class="col-xs-5">
+                <input class="form-control" id="precio" [disabled]="readonlyField"
+                       name="precio" [(ngModel)]="precio" tabindex="3">
+              </div>
+            </div>
 
-          <div class="col-xs-2">
-            <label class="form-repuesto-label" for="fecha">Fecha:</label>
-          </div>
-          <div class="col-xs-3">
-            <input class="form-control" placeholder="dd/mm/yyyy"
-                   id="fecha" name="fecha" [disabled]="readonlyField"
-                   [(ngModel)]="fechaActualizacion">
-          </div>
-        </div>
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label" for="cantidadAd">Cant. Adquirida:</label>
+              </div>
+              <div class="col-xs-5">
+                <input class="form-control" id="cantidadAd" [disabled]="readonlyField"
+                       name="cantidadAd" [(ngModel)]="cantAdquirida" tabindex="4">
+              </div>
+            </div>
 
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-repuesto-label" for="cantidadAd">Cant. Adquirida:</label>
-          </div>
-          <div class="col-xs-3">
-            <input class="form-control" id="cantidadAd" [disabled]="readonlyField"
-                   name="cantidadAd" [(ngModel)]="cantAdquirida">
-          </div>
-          <div class="col-xs-2">
-            <label class="form-repuesto-label" for="cantidadRes">Cant. Restante:</label>
-          </div>
-          <div class="col-xs-3">
-            <input class="form-control" id="cantidadRes" [disabled]="readonlyField"
-                   name="cantidadRes" [(ngModel)]="cantRestante">
-          </div>
-        </div>
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label">Tipo:</label>
+              </div>
+              <div class="col-xs-7">
+                <div class="select form-control">
+                  <select class="select-form-repuesto" id="selectTipo" #selectedTipo name="selectTipo"
+                          [(ngModel)]="tipoId" [disabled]="readonlyField" tabindex="6"
+                          (change)="onSelectedTipoEquipo(selectedTipo.value)">
+                    <option disabled>Seleccionar Tipo</option>
+                    <option *ngFor="let tipo of tipos"
+                            value={{tipo.id}}>{{tipo.tipo}}
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
 
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-repuesto-label">Tipo:</label>
-          </div>
-          <div class="col-xs-3">
-            <div class="select form-control">
-              <select class="select-form-repuesto" id="selectTipo" #selectedTipo name="selectTipo"
-                      [(ngModel)]="tipoEquipo" [disabled]="readonlyField"
-                      (change)="onSelectedTipoEquipo(selectedTipo.value)">
-                <option *ngFor="let tipo of tipos"
-                        value={{tipo.id}}>{{tipo.tipo}}
-                </option>
-              </select>
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label">Representante:</label>
+              </div>
+              <div class="col-xs-7">
+                <div class="select form-control">
+                  <select class="select-form-repuesto" id="selectRepre" #selectedRepre name="selectRepre"
+                          [(ngModel)]="repreId" [disabled]="readonlyField" tabindex="8"
+                          (change)="onSelectedRepresentante(selectedRepre.value)">
+                    <option disabled>Seleccionar Representante</option>
+                    <option *ngFor="let repre of representantes"
+                            value={{repre.id}}>{{repre.nombre}}
+                    </option>
+                  </select>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="col-xs-2">
-            <label class="form-repuesto-label">Modelo:</label>
-          </div>
-          <div class="col-xs-3">
-            <div class="select form-control">
-              <select class="select-form-repuesto" id="selectModelo" #selectedModelo name="selectModelo"
-                      [(ngModel)]="modeloEquipo" [disabled]="readonlyField"
-                      (change)="onSelectedModeloEquipo(selectedModelo.value)">
-                <option *ngFor="let modelo of modelos"
-                        value={{modelo.id}}>{{modelo.modelo}}, {{modelo.marca}} }}
-                </option>
-              </select>
+          <!--columna derecha-->
+          <div class="col-xs-6">
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label" for="descripcion">Descripción:</label>
+              </div>
+              <div class="col-xs-8">
+            <textarea class="form-control" id="descripcion" rows="2" tabindex="2"
+                      name="descripcion" [(ngModel)]="descripcion"
+                      [disabled]="readonlyField">
+            </textarea>
+              </div>
+            </div>
+
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label" for="cantidadRes">Cant. Restante:</label>
+              </div>
+              <div class="col-xs-5">
+                <input class="form-control" id="cantidadRes" [disabled]="readonlyField"
+                       name="cantidadRes" [(ngModel)]="cantRestante" tabindex="5">
+              </div>
+            </div>
+
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label">Modelo:</label>
+              </div>
+              <div class="col-xs-7">
+                <div class="select form-control">
+                  <select class="select-form-repuesto" id="selectModelo" #selectedModelo name="selectModelo"
+                          [(ngModel)]="modeloId" [disabled]="readonlyField" tabindex="7"
+                          (change)="onSelectedModeloEquipo(selectedModelo.value)">
+                    <option disabled>Seleccionar Modelo</option>
+                    <option *ngFor="let modelo of modelos"
+                            value={{modelo.id}}>{{modelo.modelo}}, {{modelo.marca}}
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group row flex-items-xs-left">
+              <div class="col-xs-4 col-label-repuesto">
+                <label class="form-repuesto-label">Fecha:</label>
+              </div>
+              <div class="col-xs-5">
+                <p-calendar [(ngModel)]="fechaActualizacion" dateFormat="dd-mm-yy"
+                            placeholder="dd-mm-yyyy" tabindex="9"
+                            [monthNavigator]="true" [yearNavigator]="true"
+                            yearRange="2000:2030" name="fcompra"
+                            [disabled]="readonlyField">
+                </p-calendar>
+              </div>
             </div>
           </div>
         </div>
-
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-repuesto-label" for="representante">Representante:</label>
-          </div>
-          <div class="col-xs-3">
-            <input class="form-control" id="representante" [disabled]="readonlyField"
-                   name="representante" [(ngModel)]="representante">
-          </div>
-        </div>
-
-        <!--        <div class="form-group row flex-items-xs-left">-->
-        <!--          <div class="col-xs-2">-->
-        <!--            <label class="form-repuesto-label">Foto:</label>-->
-        <!--          </div>-->
-        <!--          <div class="col-xs-3">-->
-
-        <!--          </div>-->
-        <!--        </div>-->
       </section>
     </form>
   </div>
