--- a/client-app/src/app/home/equipo/add-equipo/add-equipo.component.html
+++ b/client-app/src/app/home/equipo/add-equipo/add-equipo.component.html
@@ -93,7 +93,7 @@
           </div>
           <div class="col-xs-5">
             <p-calendar [(ngModel)]="fechaCompra" dateFormat="dd-mm-yy"
-                        placeholder="dd-mm-yyyy"
+                        placeholder="dd-mm-yyyy" tabindex="6"
                         [monthNavigator]="true" [yearNavigator]="true"
                         yearRange="2000:2030"  name="fcompra">
             </p-calendar>
@@ -106,7 +106,7 @@
           </div>
           <div class="col-xs-5">
             <p-calendar [(ngModel)]="fechaVenGarantia" dateFormat="dd-mm-yy"
-                        placeholder="dd-mm-yyyy"
+                        placeholder="dd-mm-yyyy" tabindex="8"
                         [monthNavigator]="true" [yearNavigator]="true"
                         yearRange="2000:2030"  name="fgarantia">
             </p-calendar>
@@ -119,7 +119,7 @@
           </div>
           <div class="col-xs-5">
             <p-calendar [(ngModel)]="fechaInstalacion" dateFormat="dd-mm-yy"
-                        placeholder="dd-mm-yyyy"
+                        placeholder="dd-mm-yyyy" tabindex="10"
                         [monthNavigator]="true" [yearNavigator]="true"
                         yearRange="2000:2030"  name="finstalacion">
             </p-calendar>
