--- a/client-app/src/app/shared/representante/representante.component.html
+++ b/client-app/src/app/shared/representante/representante.component.html
@@ -48,11 +48,11 @@
         <div class="form-group row flex-items-xs-left">
 
           <div class="col-xs-3 col-label-representante">
-            <label class="form-representante-label required" for="contacto">Nombre Contacto:</label>
+            <label class="form-representante-label required" for="contacto">Contacto:</label>
           </div>
           <div class="col-xs-5">
             <input class="form-control" id="contacto" required
-                   name="contacto" [(ngModel)]="telefonoContacto">
+                   name="contacto" [(ngModel)]="nombreContacto">
           </div>
         </div>
 
